[gd_scene load_steps=3 format=2]

[ext_resource path="res://MetaBoy/MetaBoy.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/CharacterDisplayScreen.gd" type="Script" id=2]

[node name="CharacterDisplayScreen" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 1

[node name="BackPanel" type="Panel" parent="Control"]
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 1

[node name="Label" type="Label" parent="Control/BackPanel"]
margin_left = 64.0
margin_top = 24.0
margin_right = 320.0
margin_bottom = 64.0
text = "MetaBoy Info Screen"
valign = 1

[node name="MetaBoy" parent="Control/BackPanel" instance=ExtResource( 1 )]
unique_name_in_owner = true
position = Vector2( 128, 141 )

[node name="ColorRect" type="ColorRect" parent="Control/BackPanel/MetaBoy"]
show_behind_parent = true
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 100 )
color = Color( 0.627451, 0.627451, 0.627451, 0.258824 )

[node name="Attributes" type="VBoxContainer" parent="Control/BackPanel"]
margin_left = 256.0
margin_top = 64.0
margin_right = 360.0
margin_bottom = 317.0

[node name="Header" type="Label" parent="Control/BackPanel/Attributes"]
margin_right = 104.0
margin_bottom = 31.0
text = "Attributes
============"
autowrap = true

[node name="Background" type="Label" parent="Control/BackPanel/Attributes"]
margin_top = 35.0
margin_right = 104.0
margin_bottom = 49.0
text = "Background:"
autowrap = true

[node name="Back" type="Label" parent="Control/BackPanel/Attributes"]
margin_top = 53.0
margin_right = 104.0
margin_bottom = 67.0
text = "Back:"
autowrap = true

[node name="Body" type="Label" parent="Control/BackPanel/Attributes"]
margin_top = 71.0
margin_right = 104.0
margin_bottom = 85.0
text = "Body:"
autowrap = true

[node name="Face" type="Label" parent="Control/BackPanel/Attributes"]
margin_top = 89.0
margin_right = 104.0
margin_bottom = 103.0
text = "Face:"
autowrap = true

[node name="Hat" type="Label" parent="Control/BackPanel/Attributes"]
margin_top = 107.0
margin_right = 104.0
margin_bottom = 121.0
text = "Hat:"
autowrap = true

[node name="Neck" type="Label" parent="Control/BackPanel/Attributes"]
margin_top = 125.0
margin_right = 104.0
margin_bottom = 139.0
text = "Neck:"
autowrap = true

[node name="Weapon" type="Label" parent="Control/BackPanel/Attributes"]
margin_top = 143.0
margin_right = 104.0
margin_bottom = 157.0
text = "Weapon:"
autowrap = true

[node name="Waist" type="Label" parent="Control/BackPanel/Attributes"]
margin_top = 161.0
margin_right = 104.0
margin_bottom = 175.0
text = "Waist:"
autowrap = true

[node name="AttributesValues" type="VBoxContainer" parent="Control/BackPanel"]
margin_left = 344.0
margin_top = 64.0
margin_right = 608.0
margin_bottom = 317.0

[node name="Header" type="Label" parent="Control/BackPanel/AttributesValues"]
margin_right = 264.0
margin_bottom = 31.0
text = "
================================"
align = 2
autowrap = true

[node name="Background" type="Label" parent="Control/BackPanel/AttributesValues"]
margin_top = 35.0
margin_right = 264.0
margin_bottom = 49.0
text = "Background"
align = 2
autowrap = true

[node name="Back" type="Label" parent="Control/BackPanel/AttributesValues"]
margin_top = 53.0
margin_right = 264.0
margin_bottom = 67.0
text = "Back"
align = 2
autowrap = true

[node name="Body" type="Label" parent="Control/BackPanel/AttributesValues"]
margin_top = 71.0
margin_right = 264.0
margin_bottom = 85.0
text = "Body"
align = 2
autowrap = true

[node name="Face" type="Label" parent="Control/BackPanel/AttributesValues"]
margin_top = 89.0
margin_right = 264.0
margin_bottom = 103.0
text = "Face"
align = 2
autowrap = true

[node name="Hat" type="Label" parent="Control/BackPanel/AttributesValues"]
margin_top = 107.0
margin_right = 264.0
margin_bottom = 121.0
text = "Hat"
align = 2
autowrap = true

[node name="Neck" type="Label" parent="Control/BackPanel/AttributesValues"]
margin_top = 125.0
margin_right = 264.0
margin_bottom = 139.0
text = "Neck"
align = 2
autowrap = true

[node name="Weapon" type="Label" parent="Control/BackPanel/AttributesValues"]
margin_top = 143.0
margin_right = 264.0
margin_bottom = 157.0
text = "Weapon"
align = 2
autowrap = true

[node name="Waist" type="Label" parent="Control/BackPanel/AttributesValues"]
margin_top = 161.0
margin_right = 264.0
margin_bottom = 175.0
text = "Waist"
align = 2
autowrap = true

[node name="BackButton" type="Button" parent="Control/BackPanel"]
margin_left = 64.0
margin_top = 312.0
margin_right = 106.0
margin_bottom = 332.0
text = "Back"

[node name="PlayTopDownButton" type="Button" parent="Control/BackPanel"]
margin_left = 256.0
margin_top = 312.0
margin_right = 420.0
margin_bottom = 332.0
text = "Play Top-Down Example"

[node name="PlayPlatformerButton" type="Button" parent="Control/BackPanel"]
margin_left = 440.0
margin_top = 312.0
margin_right = 607.0
margin_bottom = 332.0
text = "Play Platformer Example"

[node name="IdleButton" type="Button" parent="Control/BackPanel"]
margin_left = 64.0
margin_top = 205.0
margin_right = 106.0
margin_bottom = 225.0
text = "Idle"

[node name="RunButton" type="Button" parent="Control/BackPanel"]
margin_left = 152.0
margin_top = 205.0
margin_right = 194.0
margin_bottom = 225.0
text = "Run"

[node name="SpeedLabel" type="Label" parent="Control/BackPanel"]
margin_left = 64.0
margin_top = 237.0
margin_right = 138.0
margin_bottom = 251.0
text = "Speed: x2"

[node name="SpeedSlider" type="HSlider" parent="Control/BackPanel"]
margin_left = 64.0
margin_top = 261.0
margin_right = 192.0
margin_bottom = 277.0
min_value = 0.1
max_value = 4.0
step = 0.1
value = 2.0

[node name="CollectionLabel" type="Label" parent="Control/BackPanel"]
unique_name_in_owner = true
margin_left = 256.0
margin_top = 261.0
margin_right = 384.0
margin_bottom = 275.0
text = "Collection: OG"

[connection signal="pressed" from="Control/BackPanel/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Control/BackPanel/PlayTopDownButton" to="." method="_on_PlayTopDownButton_pressed"]
[connection signal="pressed" from="Control/BackPanel/PlayPlatformerButton" to="." method="_on_PlayPlatformerButton_pressed"]
[connection signal="pressed" from="Control/BackPanel/IdleButton" to="." method="_on_IdleButton_pressed"]
[connection signal="pressed" from="Control/BackPanel/RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="value_changed" from="Control/BackPanel/SpeedSlider" to="." method="_on_SpeedSlider_value_changed"]
